P4ADEV-975_fix issues